# sat

./: README.md  Sat.hs  VisualModel.hs  sat.cabal
Sat/: Core.hs  Parser.hs  VisualModel.hs
Sat/Example/: Example.hs
Sat/GUI/: Board.hs  EntryFormula.hs  FigureList.hs  File.hs  FileStatusbar.hs  GState.hs  Gui.hs  IconTable.hs  Main.hs  Piece.hs  PredicateList.hs  SVG.hs  SVGBoard.hs  SVGBoardAlt.hs  Settings.hs  SymbolList.hs  UndoRedo.hs  sat.glade  sat.ui
Sat/Signatures/: Figures.hs
Sat/VisualModels/: FiguresBoard.hs
data/: sat.ui
debian/: changelog  control  copyright  files  rules
