Name:                sat
Version:             0.1
Synopsis:            herramienta para comprender la semántica de fórmulas de primer orden.
Description:         sat es una herramienta para el diseño de mundos de objetos
 geométricos, la formulación de propiedades sobre estos objetos en
 lógica de primer orden, y la exploración de la adecuación entre mundos
 y propiedades.
License:             GPL
License-file:        LICENSE
Author:              Renato Cherini, Alejandro Gadea, Emmanuel Gunther, Miguel Pagano
Maintainer:          Miguel Pagano <pagano@famaf.unc.edu.ar>
Build-Type:          Simple
Cabal-Version:       >=1.8
Build-type:          Simple
Bug-reports:         https://github.com/manugunther/sat/issues


Executable sat-gui
    buildable: True
    HS-Source-Dirs: .
    Main-is: Sat/GUI/Gui.hs
    GHC-options: -Odph -Wall -threaded
    build-depends:     base  ,
                       containers ,
                       gtk ==0.12.*, 
                       cereal ,
                       parsec ,
                       mtl ,
                       bytestring ,
                       svgcairo ==0.12.*, 
                       transformers ==0.3.*, 
                       lens-family-core ==0.1.*, 
                       reference ==0.1.*, 
                       lens-family-th ==0.2.*, 
                       cairo ==0.12.*,
                       text ==0.11.2.*,
                       blaze-svg, 
                       blaze-markup, 
                       colour

