Name:                sat
Version:             0.3
Synopsis:            herramienta para comprender la semántica de fórmulas de primer orden.
Description:         sat es una herramienta para el diseño de mundos de objetos
 geométricos, la formulación de propiedades sobre estos objetos en
 lógica de primer orden, y la exploración de la adecuación entre mundos
 y propiedades.
Category:            Logic
License:             GPL-3
License-file:        LICENSE
Author:              Renato Cherini, Alejandro Gadea, Emmanuel Gunther, Miguel Pagano
Maintainer:          Miguel Pagano <pagano@famaf.unc.edu.ar>
Build-Type:          Simple
Cabal-Version:       >=1.8
Build-type:          Simple
Bug-reports:         https://github.com/manugunther/sat/issues
data-dir: data
data-files: sat.ui, board.svg

Source-repository head
  type: git
  location: https://github.com/manugunther/sat



Executable sat
    buildable: True
    HS-Source-Dirs: .
    Main-is: Sat/GUI/Main.hs
    GHC-options: -Odph -Wall -threaded
    other-modules: Paths_sat ,
                   Sat.Parser,         
                   Sat.VisualModels.FiguresBoard, 
                   Sat.GUI.Gui, 
                   Sat.GUI.SVGBoard, 
                   Sat.GUI.Board, 
                   Sat.GUI.Settings, 
                   Sat.GUI.GState, 
                   Sat.GUI.PredicateList, 
                   Sat.GUI.EntryFormula, 
                   Sat.GUI.UndoRedo, 
                   Sat.GUI.SVGBoardAlt, 
                   Sat.GUI.Main, 
                   Sat.GUI.IconTable, 
                   Sat.GUI.SVG, 
                   Sat.GUI.File, 
                   Sat.GUI.FigureList, 
                   Sat.GUI.FileStatusbar, 
                   Sat.VisualModel, 
                   Sat.Core, 
                   Sat.Example.Example, 
                   Sat.Signatures.Figures
    build-depends:     base ,
                       containers ,
                       gtk ,
                       glib ,
                       cereal ,
                       parsec ,
                       mtl ,
                       bytestring ,
                       svgcairo ==0.12.*, 
                       transformers ==0.3.*, 
                       lens ,
                       cairo ==0.12.*,
                       text ,
                       blaze-svg ==0.3.3.0, 
                       blaze-markup, 
                       colour,
                       utf8-string

